src/css/icons.scss
/* Contains icon classes */

.git {
    background: url('../assets/icons/git/git.svg');
    background-size: 100% 100%;
}

.github {
    background: url('../assets/icons/git/github.svg');
    background-size: 100% 100%;
}

.gitlab {
    background: url('../assets/icons/git/gitlab.svg');
    background-size: 100% 100%;
}

.bitbucket {
    background: url('../assets/icons/git/bitbucket.svg');
    background-size: 100% 100%;
}

.healthy,
.deployed,
.synced,
.sync.ok,
.deploy-success {
    background-image: url('../assets/icons/appstatus/healthy.svg');
}

.missing {
    background-image: url('../assets/icons/appstatus/missing.svg');
}

.unknown,
.wf-unknown {
    background-image: url('../assets/icons/appstatus/unknown.svg');
}

.not-deployed {
    background-image: url('../assets/icons/appstatus/notdeployed.svg');
}

.suspended {
    background-image: url('../assets/icons/appstatus/suspended.svg');
}

.degraded,
.outofsync,
.sync.failed {
    background-image: url('../assets/icons/appstatus/degraded.svg');
}

.progressing,
.uninstalling,
.pending-install,
.pending-upgrade,
.pending-rollback,
.deploy-init,
.request-accepted,
.git-success,
.acd-success {
    background-image: url('../assets/icons/appstatus/progressing-rotating.svg');
}

.enqueued,
.hibernating {
    background-image: url('../assets/icons/ic-hibernate-2.svg');
}

.failed,
.unabletofetch,
.superseded {
    background-image: url('../assets/icons/appstatus/ic-appstatus-failed.svg');
}

.timed-out {
    background-image: url('../assets/icons/ic-timeout-red.svg');
}

.outofsync,
.sync.failed,
.que-error,
.deque-error,
.git-error,
.acd-error,
.trigger-error {
    background-image: url('../assets/icons/misc/errorInfo.svg');
    transform: rotate(180deg);
}

.icon-dim-8 {
    width: 8px;
    height: 8px;
}

.icon-dim-10 {
    width: 10px;
    height: 10px;
}

.icon-dim-12 {
    width: 12px;
    height: 12px;
}

.icon-dim-14 {
    width: 14px;
    height: 14px;
}

.icon-dim-16 {
    width: 16px;
    height: 16px;
}

.icon-dim-18 {
    width: 18px;
    height: 18px;
}

.icon-dim-20 {
    width: 20px;
    height: 20px;
}

.icon-dim-22 {
    width: 22px;
    height: 22px;
}

.icon-dim-24 {
    width: 24px;
    height: 24px;
}

.icon-dim-28 {
  width: 28px;
  height: 28px;
}

.icon-dim-30 {
    width: 30px;
    height: 30px;
}

.icon-dim-32 {
    width: 32px;
    height: 32px;
}

.icon-dim-34 {
    width: 34px;
    height: 34px;
}

.icon-dim-36 {
    width: 36px;
    height: 36px;
}

.icon-dim-40 {
    width: 40px;
    height: 40px;
}

.icon-dim-42 {
    width: 42px;
    height: 42px;
}

.icon-dim-44 {
    width: 44px;
    height: 44px;
}

.icon-dim-48 {
    width: 48px;
    height: 48px;
}

.icon-n2 {
    .fill-color {
        fill: var(--N200);
    }

    .stroke-color {
        stroke: var(--N200);
    }
}

.icon-n3 {
    .fill-color {
        fill: var(--N300);
    }

    .stroke-color {
        stroke: var(--N300);
    }
}

.icon-n4 {
    .fill-color {
        fill: var(--N400);
    }

    .stroke-color {
        stroke: var(--N400);
    }
}

.icon-n5 {
    .fill-color {
        fill: var(--N500);
    }

    .stroke-color {
        stroke: var(--N500);
    }
}


.icon-n6 {
    .fill-color {
        fill: var(--N600);
    }

    .stroke-color {
        stroke: var(--N600);
    }
}

.icon-delete {
    &:hover {
        .stroke-color {
            stroke: var(--R500);
        }
    }
}

